removed backup folders from backend

--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -25,6 +25,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f7bcb6cf-a623-4c23-b9b9-077a85749829"
+      }
     }
   }
 }
