--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,9 @@
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "express": "^4.18.2",
     "formik": "^2.4.2",
+    "nodemon": "^3.0.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-asset": "^2.1.1",
@@ -30,6 +32,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
