--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "@tamagui/config": "^1.76.0",
+    "@unimodules/core": "^7.1.2",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -36,9 +36,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "tamagui": "^1.76.0",
-    "yup": "^1.2.0",
-    "typescript": "^4.9.4",
-    "@types/react": "~18.0.27"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
