--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -21,7 +21,7 @@
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.2",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
     "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
