--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,6 +31,9 @@
     "react-native": "0.71.14",
     "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-input-select": "^1.3.3",
+    "react-native-pager-view": "6.1.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
@@ -38,7 +41,8 @@
     "react-native-vector-icons": "^9.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
