--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -37,14 +37,15 @@
     "react-native-pager-view": "^6.2.3",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^9.0.0",
-    "react-native-reanimated": "^3.6.1",
+    "react-native-reanimated": "^3.6.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^9.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-device": "~5.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
