--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.10",
     "@expo-google-fonts/dm-sans": "^0.2.3",
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
@@ -22,11 +23,13 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@unimodules/core": "^7.1.2",
     "expo": "^50.0.2",
+    "expo-device": "~5.9.3",
     "expo-font": "^11.10.2",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "^1.11.1",
     "express": "^4.18.2",
     "formik": "^2.4.2",
+    "graphql": "^15.8.0",
     "nodemon": "^3.0.1",
     "react": "18.2.0",
     "react-native": "^0.73.2",
@@ -37,15 +40,14 @@
     "react-native-pager-view": "^6.2.3",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^9.0.0",
-    "react-native-reanimated": "^3.6.0",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^9.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "yup": "^1.2.0",
-    "expo-device": "~5.9.3"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
