--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native-picker/picker": "github:react-native-picker/picker",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -23,12 +24,14 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@unimodules/core": "^7.1.2",
-    "expo": "^50.0.2",
+    "expo": "^50.0.4",
     "expo-device": "~5.9.3",
     "expo-font": "^11.10.2",
+    "expo-google-sign-in": "^11.0.0",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "^1.11.1",
     "express": "^4.18.2",
+    "firebase": "^10.7.2",
     "formik": "^2.4.2",
     "graphql": "^15.8.0",
     "nodemon": "^3.0.1",
@@ -41,7 +44,7 @@
     "react-native-pager-view": "^6.2.3",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^9.0.0",
-    "react-native-reanimated": "^3.6.1",
+    "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
