--- a/Backend/nodejs/package.json
+++ b/Backend/nodejs/package.json
@@ -10,7 +10,8 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "express": "^4.19.2",
     "five-bells-condition": "^5.0.1",
-    "xrpl": "^2.11.0"
+    "xrpl": "^2.14.1"
   }
 }
