Revert "New fronted"

--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#87BBD0"
+      "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -21,11 +21,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "permissions": [
-        "android.permission.RECORD_AUDIO"
-      ],
-      "package": "com.nanakay01.tugela"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -34,14 +30,6 @@
       "eas": {
         "projectId": "f7bcb6cf-a623-4c23-b9b9-077a85749829"
       }
-    },
-    "plugins": [
-      [
-        "expo-image-picker",
-        {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
-        }
-      ]
-    ]
+    }
   }
 }
