--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,50 +4,37 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.10",
     "@expo-google-fonts/dm-sans": "^0.2.3",
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
-    "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-google-signin/google-signin": "^11.0.0",
-    "@react-native-picker/picker": "github:react-native-picker/picker",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@unimodules/core": "^7.1.2",
-    "expo": "^50.0.5",
-    "expo-device": "~5.9.3",
-    "expo-font": "^11.10.2",
-    "expo-google-sign-in": "^11.0.0",
-    "expo-image-picker": "^14.7.1",
-    "expo-status-bar": "^1.11.1",
+    "expo": "~48.0.18",
+    "expo-font": "~11.1.1",
+    "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
-    "firebase": "^10.7.2",
     "formik": "^2.4.2",
-    "graphql": "^15.8.0",
     "nodemon": "^3.0.1",
     "react": "18.2.0",
-    "react-native": "^0.73.2",
+    "react-native": "0.71.14",
     "react-native-asset": "^2.1.1",
-    "react-native-gesture-handler": "^2.14.1",
-    "react-native-image-picker": "^7.1.0",
-    "react-native-input-select": "^1.3.3",
-    "react-native-pager-view": "^6.2.3",
-    "react-native-picker": "^4.3.7",
-    "react-native-picker-select": "^9.0.0",
-    "react-native-reanimated": "^3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
